add projects section

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </head>
     <body>
         <!-- Start NAVIGATION -->
-        <nav id="navbar" class="navbar-section">
+        <nav id="navbar" class="navbar">
             <ul class="navbar__list">
                 <li><a href="#!" class="navbar__link">About</a></li>
                 <li><a href="#!" class="navbar__link">Work</a></li>
@@ -114,15 +114,154 @@
         <!-- End NAVIGATION -->
 
         <!-- Start WELCOME -->
-        <section id="welcome" class="welcome-section">
+        <section id="welcome" class="welcome">
             <h1 class="welcome__heading">Hey I am Tuan</h1>
-            <p class="welcome__desc">a web developer</p>
+            <p class="welcome__desc">a learner programming</p>
         </section>
         <!-- End WELCOME -->
 
-        <section id="projects" class="projects-section">
-            <h2>These are some of my projects</h2>
-            <div class="container projects-container"></div>
+        <!-- Start PROJECTS -->
+        <section id="projects" class="projects">
+            <h2 class="projects__heading">These are some of my projects</h2>
+            <div class="container projects__container">
+                <!-- Project 1 -->
+                <a
+                    href="https://zennxt.github.io/freeCodeCamp_build-Technical-Documentation-page/"
+                    target="_blank"
+                    rel="noopener"
+                    class="projects__item"
+                >
+                    <div class="projects__wrap-img">
+                        <img
+                            src="./assets/image/technical-documentation-page.png"
+                            alt="Technical documentation page"
+                            class="projects__img"
+                        />
+                    </div>
+                    <p class="projects__title">
+                        <span class="projects__title-effect">&lt;</span>
+                        Technical documentation page
+                        <span class="projects__title-effect">&#47;&gt;</span>
+                    </p>
+                </a>
+
+                <!-- Project 2 -->
+                <a
+                    href="https://zennxt.github.io/freeCodeCamp_build-a-Product-landing-page/"
+                    target="_blank"
+                    rel="noopener"
+                    class="projects__item"
+                >
+                    <div class="projects__wrap-img">
+                        <img
+                            src="./assets/image/trombone-landing-page.png"
+                            alt="Trombone landing page"
+                            class="projects__img"
+                        />
+                    </div>
+                    <p class="projects__title">
+                        <span class="projects__title-effect">&lt;</span>
+                        Trombone landing page
+                        <span class="projects__title-effect">&#47;&gt;</span>
+                    </p>
+                </a>
+
+                <!-- Project 3 -->
+                <a
+                    href="https://zennxt.github.io/F8_htmlcss-1/"
+                    target="_blank"
+                    rel="noopener"
+                    class="projects__item"
+                >
+                    <div class="projects__wrap-img">
+                        <img
+                            src="./assets/image/real-estate-landing-page.png"
+                            alt="Real Estate landing page"
+                            class="projects__img"
+                        />
+                    </div>
+
+                    <p class="projects__title">
+                        <span class="projects__title-effect">&lt;</span>
+                        Real Estate landing page
+                        <span class="projects__title-effect">&#47;&gt;</span>
+                    </p>
+                </a>
+
+                <!-- Project 4 -->
+                <a
+                    href="https://zennxt.github.io/F8_htmlcss-2/"
+                    target="_blank"
+                    rel="noopener"
+                    class="projects__item"
+                >
+                    <div class="projects__wrap-img">
+                        <img
+                            src="./assets/image/elearning-landing-page-1.png"
+                            alt="eLearning landing page 1"
+                            class="projects__img"
+                        />
+                    </div>
+                    <p class="projects__title">
+                        <span class="projects__title-effect">&lt;</span>
+                        eLearning landing page 1
+                        <span class="projects__title-effect">&#47;&gt;</span>
+                    </p>
+                </a>
+
+                <!-- Project 5 -->
+                <a
+                    href="https://zennxt.github.io/F8_htmlcss-2.1/"
+                    target="_blank"
+                    rel="noopener"
+                    class="projects__item"
+                >
+                    <div class="projects__wrap-img">
+                        <img
+                            src="./assets/image/elearning-landing-page-2.png"
+                            alt="eLearning landing page 2"
+                            class="projects__img"
+                        />
+                    </div>
+                    <p class="projects__title">
+                        <span class="projects__title-effect">&lt;</span>
+                        eLearning landing page 2
+                        <span class="projects__title-effect">&#47;&gt;</span>
+                    </p>
+                </a>
+
+                <!-- Project 6 -->
+                <a
+                    href="https://zennxt.github.io/F8_htmlcss-3/"
+                    target="_blank"
+                    rel="noopener"
+                    class="projects__item"
+                >
+                    <div class="projects__wrap-img">
+                        <img
+                            src="./assets/image/dental-care-landing-page.png"
+                            alt="Dental Care landing page"
+                            class="projects__img"
+                        />
+                    </div>
+                    <p class="projects__title">
+                        <span class="projects__title-effect">&lt;</span>
+                        Dental Care landing page
+                        <span class="projects__title-effect">&#47;&gt;</span>
+                    </p>
+                </a>
+            </div>
+            <!-- Button -->
+            <a
+                href="https://github.com/zennxt"
+                target="_blank"
+                rel="noopener"
+                class="btn projects__btn"
+                >Show all<i
+                    class="fa-solid fa-chevron-right projects__btn-icon-effect"
+                ></i
+            ></a>
         </section>
+        <!-- End PROJECTS -->
     </body>
 </html>
