add navbar link

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!-- Start NAVIGATION -->
         <nav id="navbar" class="navbar">
             <ul class="navbar__list">
-                <li><a href="#!" class="navbar__link">About</a></li>
+                <li><a href="#welcome" class="navbar__link">About</a></li>
                 <li><a href="#!" class="navbar__link">Work</a></li>
                 <li><a href="#!" class="navbar__link">Contact</a></li>
             </ul>
