--- a/index.html
+++ b/index.html
@@ -263,5 +263,20 @@
             ></a>
         </section>
         <!-- End PROJECTS -->
+
+        <!-- Start FOOTER -->
+        <section id="footer" class="footer">
+            <p class="footer__copyright">
+                <i class="fa-regular fa-copyright"></i> Copyright by
+                <a
+                    href="https://www.freecodecamp.org/"
+                    target="_blank"
+                    rel="noopener"
+                    class="footer__copyright-link"
+                    >freeCodeCamp <i class="fa-brands fa-free-code-camp"></i
+                ></a>
+            </p>
+        </section>
+        <!-- End FOOTER -->
     </body>
 </html>
